Spatial navigation not Working for Map and Area Tags https://bugs.webkit.org/show_bug.cgi?id=47142

Reviewed by Antonio Gomes.

WebCore:

Give area elements special treatment in spatial navigation algorithm by getting the
rect of the area from the associated image. Since area elements are likely to overlap
if they are not rects, or if authors are not careful, we flatten the rect of area elements.

Tests: fast/spatial-navigation/snav-imagemap-area-not-focusable.html
       fast/spatial-navigation/snav-imagemap-area-without-image.html
       fast/spatial-navigation/snav-imagemap-overlapped-areas.html
       fast/spatial-navigation/snav-imagemap-simple.html

* page/FocusController.cpp:
(WebCore::FocusController::findFocusCandidateInContainer):
(WebCore::FocusController::advanceFocusDirectionallyInContainer):
(WebCore::FocusController::advanceFocusDirectionally):
* page/SpatialNavigation.cpp:
(WebCore::FocusCandidate::FocusCandidate):
(WebCore::virtualRectForDirection):
(WebCore::virtualRectForAreaElementAndDirection):
* page/SpatialNavigation.h:
(WebCore::FocusCandidate::FocusCandidate):

LayoutTests:

* fast/spatial-navigation/snav-imagemap-area-not-focusable-expected.txt: Added.
* fast/spatial-navigation/snav-imagemap-area-not-focusable.html: Added.
* fast/spatial-navigation/snav-imagemap-area-without-image-expected.txt: Added.
* fast/spatial-navigation/snav-imagemap-area-without-image.html: Added.
* fast/spatial-navigation/snav-imagemap-overlapped-areas-expected.txt: Added.
* fast/spatial-navigation/snav-imagemap-overlapped-areas.html: Added.
* fast/spatial-navigation/snav-imagemap-simple-expected.txt: Added.
* fast/spatial-navigation/snav-imagemap-simple.html: Added.



Canonical link: https://commits.webkit.org/63868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73452 268f45cc-cd09-0410-ab3c-d52691b4dbfc